# coal-serialization-cpp-17

./: CMakeLists.txt  README.md
.github/workflows/: continuous-integration-workflow.yaml
include/coal-serialization/: coal-std-bindings.hpp  coal.hpp
lib/: CMakeLists.txt
lib/coal-serialization/: CMakeLists.txt  coal-std-bindings.cpp  coal.cpp
samples/: CMakeLists.txt  SampleGenerator.cpp
scripts/: ci-tests.bat  ci-tests.ps1  ci-tests.sh
tests/: CMakeLists.txt  SerializationTests.cpp
